--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,12 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.4.2'
     implementation 'androidx.navigation:navigation-ui:2.4.2'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.paytm.appinvokesdk:appinvokesdk:1.3'
+    implementation('com.paytm:pgplussdk:1.2.3') {
+        transitive = true;
+    }
+    implementation 'com.github.Parthav46:HttpRequest:1.0'
+    implementation 'com.google.firebase:firebase-functions:20.0.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
