--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,11 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url "https://artifactory.paytm.in/libs-release-local"
+        }
+        maven { url 'https://jitpack.io' }
+        jcenter()
     }
 }
 rootProject.name = "login"
