--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.savita.login">
+    package="com.savita.login"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_SMS"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
@@ -25,10 +30,10 @@
             android:label="@string/title_activity_navigationactivity"
             android:theme="@style/Theme.Login.NoActionBar" />
         <activity
-            android:name="com.savita.payment.Payment"
+            android:name="com.savita.navigate.CanUploadDocument"
             android:exported="false" />
         <activity
-            android:name="com.savita.navigate.CanUploadDocument"
+            android:name="com.savita.payment.Payment"
             android:exported="false" />
         <activity
             android:name="com.savita.navigate.UploadedDocument"
@@ -36,6 +41,9 @@
         <activity
             android:name=".RequireDetail"
             android:exported="false" />
+        <activity android:name="com.paytm.pgsdk.PaytmPGActivity"
+            android:screenOrientation="portrait"
+            android:configChanges="keyboardHidden|orientation|keyboard"/>
         <activity
             android:name=".RequireDocument"
             android:exported="false" />
